Adding RRF Reranking of the documents

--- a/Evaluation of retrieval methods.ipynb
+++ b/Evaluation of retrieval methods.ipynb
@@ -1469,6 +1469,159 @@
     "# Evaluate the hybrid search in questions and answer of the FAQ\n",
     "evaluate(ground_truth, question_text_search_hybrid)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d896e75",
+   "metadata": {},
+   "source": [
+    "## Evaluate Reranking in Document Retrieval\n",
+    "\n",
+    "We used reranking process to re order the retrieved documents from the ES based on their relevance with the user query\n",
+    "- Create the function to calculate the RRF\n",
+    "- Retrieve the documents using hybrid search\n",
+    "- From the retrieved document calculate the RRF score\n",
+    "- Re order the retrieved documents based on the RRF scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "17ac4e12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the RRF metric\n",
+    "def compute_rrf(rank, k=60):\n",
+    "    return 1 / (k + rank)\n",
+    "\n",
+    "# Here we will retrieve 10 documents from the ES and reorder then using RRF\n",
+    "def elastic_search_hybrid_rrf(field, query, vector, course, k=60):\n",
+    "    # Vector Search\n",
+    "    knn_query = {\n",
+    "        \"field\": field,\n",
+    "        \"query_vector\": vector,\n",
+    "        \"k\": 10,  # Here we will retrieve 10 documents\n",
+    "        \"num_candidates\": 10000,\n",
+    "        \"boost\": 0.5,\n",
+    "        \"filter\": {\n",
+    "            \"term\": {\n",
+    "                \"course\": course\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "    # Keyword search\n",
+    "    keyword_query = {\n",
+    "        \"bool\": {\n",
+    "            \"must\": {\n",
+    "                \"multi_match\": {\n",
+    "                    \"query\": query,\n",
+    "                    \"fields\": [\"question\", \"text\", \"section\"],\n",
+    "                    \"type\": \"best_fields\",\n",
+    "                    \"boost\": 0.5,\n",
+    "                }\n",
+    "            },\n",
+    "            \"filter\": {\n",
+    "                \"term\": {\n",
+    "                    \"course\": course\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }    \n",
+    "\n",
+    "    # Here we are retrieving 10 documents from vector search\n",
+    "    knn_results = es_client.search(\n",
+    "        index=index_name, \n",
+    "        body={\n",
+    "            \"knn\": knn_query, \n",
+    "            \"size\": 10\n",
+    "        }\n",
+    "    )['hits']['hits']\n",
+    "    # Here we are retrieving 10 documents from keyword search\n",
+    "    keyword_results = es_client.search(\n",
+    "        index=index_name, \n",
+    "        body={\n",
+    "            \"query\": keyword_query, \n",
+    "            \"size\": 10\n",
+    "        }\n",
+    "    )['hits']['hits']\n",
+    "\n",
+    "    rrf_scores = {}\n",
+    "    # Calculate RRF using vector search results\n",
+    "    for rank, hit in enumerate(knn_results):\n",
+    "        doc_id = hit['_id']\n",
+    "        rrf_scores[doc_id] = compute_rrf(rank + 1, k)\n",
+    "\n",
+    "    # Adding keyword search result scores\n",
+    "    for rank, hit in enumerate(keyword_results):\n",
+    "        doc_id = hit['_id']\n",
+    "        if doc_id in rrf_scores:\n",
+    "            rrf_scores[doc_id] += compute_rrf(rank + 1, k)\n",
+    "        else:\n",
+    "            rrf_scores[doc_id] = compute_rrf(rank + 1, k)\n",
+    "\n",
+    "    # Sort RRF scores in descending order\n",
+    "    reranked_docs = sorted(rrf_scores.items(), key=lambda x: x[1], reverse=True)\n",
+    "    \n",
+    "    # Get top 5 documents by the score\n",
+    "    final_results = []\n",
+    "    for doc_id, score in reranked_docs[:5]:\n",
+    "        doc = es_client.get(index=index_name, id=doc_id)\n",
+    "        final_results.append(doc['_source'])\n",
+    "    \n",
+    "    return final_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "04d72eb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def question_text_hybrid_rrf(q):\n",
+    "    question = q['question']\n",
+    "    course = q['course']\n",
+    "\n",
+    "    v_q = model.encode(question)\n",
+    "\n",
+    "    return elastic_search_hybrid_rrf('question_text_vector', question, v_q, course)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "476fa3f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9d495ab9bcef4310af147d50602fc53b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4627 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'hit_rate': 0.9520207477847418, 'mrr': 0.8745911677833017}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate(ground_truth, question_text_hybrid_rrf)"
+   ]
   }
  ],
  "metadata": {
